# JNITest

./: .gitignore  HookC.md  gradle.properties
app/: CMakeLists.txt  build.gradle  gojni.txt  proguard-rules.pro
app/src/androidTest/java/cn/qssq666/testjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mylib.cpp
app/src/main/java/cn/qssq666/testjni/: AppContext.java  Info.java  MainActivity.java  MainActivity1.java  MainActivity2.java  MyAppContext.java
app/src/main/java/cn/qssq666/testjni/aaa/: InfoXXX.java
app/src/main/res/layout/: activity_main.xml  dialog_test.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/cn/qssq666/testjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
